<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/orange"
        android:gravity="center"
        android:text="版本更新"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dialog_title_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:padding="20dp"
            android:text="@string/txt_update_msg"
            android:textColor="#ff484848"
            android:textSize="@dimen/dialog_content_size" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/txt_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/common_btn_orange_selector"
            android:text="@string/txt_update_ok"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_btn_size" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txt_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/common_btn_orange_selector"
            android:text="@string/txt_update_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_btn_size" />
    </RelativeLayout>

</LinearLayout>